RESOLVED FIXED53934
Missing text match markers with accelerated content
https://bugs.webkit.org/show_bug.cgi?id=53934
Summary Missing text match markers with accelerated content
Anders Carlsson
Reported 2011-02-07 12:39:18 PST
Missing text match markers with accelerated content
Attachments
Patch (1.70 KB, patch)
2011-02-07 12:41 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2011-02-07 12:41:47 PST
Anders Carlsson
Comment 2 2011-02-07 12:43:11 PST
Note You need to log in before you can comment on or make changes to this bug.